[project]
name = "research-eda"
version = "0.1.0"
description = "Exploratory data analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitermplus>=0.7.0",
    "gensim>=4.3.3",
    "ipywidgets>=8.1.6",
    "kagglehub>=0.3.12",
    "keybert[spacy]>=0.9.0",
    "notebook>=7.4.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.5",
    "tmplot>=0.2.0",
    "tomotopy>=0.13.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
